# C-

./: .gitignore  README.md  func.cpp
laba_1/: CMakeLists.txt  func.cpp  func.hpp  input.txt  main.cpp
laba_2/: CMakeLists.txt  main.cpp
laba_3/: CMakeLists.txt  main.cpp  string.cpp  string.hpp
laba_4/: CMakeLists.txt  main.cpp
laba_5/: CMakeLists.txt
laba_5/inc/: Game.hpp
laba_6/: CMakeLists.txt  main.cpp
laba_6/inc/: Game.hpp
laba_7/: CMakeLists.txt
laba_7/inc/: game.hpp  ship.hpp
laba_8/: CMakeLists.txt
laba_8/inc/: Comet.hpp  Game.hpp  Star.hpp
laba_9/: CMakeLists.txt  main.cpp
